tdf#148357 SwNavigator: recover scroll positon after content delete

Change-Id: I6c376e5190575232d2867843c1b2b0e57e620aaf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132691
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>